force-app/main/default/objects/Activity/fields/AES_SFConnector__AgentType__c.field-meta.xml
<CustomField>
    <fullName>AES_SFConnector__AgentType__c</fullName>
    <label>AgentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>