force-app/main/default/objects/Activity/fields/AES_SFConnector__Called__c.field-meta.xml
<CustomField>
    <fullName>AES_SFConnector__Called__c</fullName>
    <description>The number that was called by the originator. (DNIS)</description>
    <label>Called</label>
    <type>Phone</type>
</CustomField>