force-app/main/default/objects/Activity/fields/AES_SFConnector__Caller__c.field-meta.xml
<CustomField>
    <fullName>AES_SFConnector__Caller__c</fullName>
    <description>The number that was dialed by the originator of the call. (ANI)</description>
    <label>Caller</label>
    <type>Phone</type>
</CustomField>