force-app/main/default/objects/Activity/fields/AES_SFConnector__UCID__c.field-meta.xml
<CustomField>
    <fullName>AES_SFConnector__UCID__c</fullName>
    <description>Universal Call ID for the Avaya telephone system.</description>
    <label>UCID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>