force-app/main/default/objects/Activity/fields/AES_SFConnector__UUI__c.field-meta.xml
<CustomField>
    <fullName>AES_SFConnector__UUI__c</fullName>
    <description>User-to-User Information as provided by the CTI link</description>
    <label>UUI</label>
    <length>96</length>
    <type>Text</type>
</CustomField>