force-app/main/default/objects/Activity/fields/AGI_Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>AGI_Send_Survey__c</fullName>
    <label>AGI - Send Survey ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>