force-app/main/default/objects/Activity/fields/API_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Status__c</fullName>
    <description>Data dari API Purecloud Survey yang ditarik, untuk melihat apakah tarikan data error atau berhasil. Jikalau berhasil, maka &quot;Okay&quot;. Jika gagal, error log akan ditaruh.</description>
    <label>API Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>