force-app/main/default/objects/Activity/fields/Call_Duration_Second__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Second__c</fullName>
    <label>Call Duration (Second)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>