force-app/main/default/objects/Activity/fields/Customer_IVR__c.field-meta.xml
<CustomField>
    <fullName>Customer_IVR__c</fullName>
    <description>pilihan IVR customer</description>
    <label>Customer IVR</label>
    <type>TextArea</type>
</CustomField>