force-app/main/default/objects/Activity/fields/Duration_Dial__c.field-meta.xml
<CustomField>
    <fullName>Duration_Dial__c</fullName>
    <label>Duration Dial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>