force-app/main/default/objects/Activity/fields/Duration_Hold__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hold__c</fullName>
    <label>Duration Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>