force-app/main/default/objects/Activity/fields/Duration_in_Minute__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Minute__c</fullName>
    <description>IF(CallDurationInSeconds/3600 &lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT(FLOOR(CallDurationInSeconds/3600)) + &quot;:&quot; + IF(FLOOR(MOD(CallDurationInSeconds,3600)/60)&lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT( FLOOR(MOD(CallDurationInSeconds,3600)/60)) + &quot;:&quot; + IF(MOD(MOD(CallDurationInSeconds,3600),60)&lt; 10, &apos;0&apos;,&apos;&apos;)+ TEXT(MOD(MOD(CallDurationInSeconds,3600),60))</description>
    <formula>IF(Duration_Call__c/3600 &lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT(FLOOR(Duration_Call__c/3600)) + &quot;:&quot; + IF(FLOOR(MOD(Duration_Call__c,3600)/60)&lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT( FLOOR(MOD(Duration_Call__c,3600)/60)) + &quot;:&quot; + IF(MOD(MOD(Duration_Call__c,3600),60)&lt; 10, &apos;0&apos;,&apos;&apos;)+ TEXT(MOD(MOD(Duration_Call__c,3600),60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Minute</label>
    <type>Text</type>
</CustomField>