force-app/main/default/objects/Activity/fields/Duration_Wait__c.field-meta.xml
<CustomField>
    <fullName>Duration_Wait__c</fullName>
    <label>Duration Wait</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>