force-app/main/default/objects/Activity/fields/End_Calling_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Calling_Text__c</fullName>
    <formula>SUBSTITUTE(TEXT(( End_Calling__c + ((7*60))/1440)),&quot;Z&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Calling Text</label>
    <type>Text</type>
</CustomField>