force-app/main/default/objects/Activity/fields/Hari__c.field-meta.xml
<CustomField>
    <fullName>Hari__c</fullName>
    <formula>CASE(
MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7),
0, &quot;Minggu&quot;,
1, &quot;Senin&quot;,
2, &quot;Selasa&quot;,
3, &quot;Rabu&quot;,
4, &quot;Kamis&quot;,
5, &quot;Jumat&quot;,
6, &quot;Sabtu&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hari</label>
    <type>Text</type>
</CustomField>