force-app/main/default/objects/Activity/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <formula>LEFT(Start_Calling_Text__c,13)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interval</label>
    <type>Text</type>
</CustomField>