force-app/main/default/objects/Activity/fields/is_Transfer__c.field-meta.xml
<CustomField>
    <fullName>is_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Transfer?</label>
    <type>Checkbox</type>
</CustomField>