force-app/main/default/objects/Activity/fields/Languange__c.field-meta.xml
<CustomField>
    <fullName>Languange__c</fullName>
    <label>Languange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>