force-app/main/default/objects/Activity/fields/Manual_Insert__c.field-meta.xml
<CustomField>
    <fullName>Manual_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Insert</label>
    <type>Checkbox</type>
</CustomField>