force-app/main/default/objects/Activity/fields/Owner_Entity__c.field-meta.xml
<CustomField>
    <fullName>Owner_Entity__c</fullName>
    <formula>TEXT(Owner:User.Entity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Entity</label>
    <type>Text</type>
</CustomField>