force-app/main/default/objects/Activity/fields/Policy_App__c.field-meta.xml
<CustomField>
    <fullName>Policy_App__c</fullName>
    <formula>Contact__r.PolicyApp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy App</label>
    <type>Text</type>
</CustomField>