force-app/main/default/objects/Activity/fields/PQ_1_No__c.field-meta.xml
<CustomField>
    <fullName>PQ_1_No__c</fullName>
    <formula>PureCloud_Question1__c == &apos;No&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PQ 1 - No</label>
    <type>Checkbox</type>
</CustomField>