force-app/main/default/objects/Activity/fields/PQ_1_Yes__c.field-meta.xml
<CustomField>
    <fullName>PQ_1_Yes__c</fullName>
    <formula>PureCloud_Question1__c == &apos;Yes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PQ 1 - Yes</label>
    <type>Checkbox</type>
</CustomField>