force-app/main/default/objects/Activity/fields/PQ_2_No__c.field-meta.xml
<CustomField>
    <fullName>PQ_2_No__c</fullName>
    <formula>PureCloud_Question2__c == &apos;No&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PQ 2 - No</label>
    <type>Checkbox</type>
</CustomField>