force-app/main/default/objects/Activity/fields/PQ_2_Yes__c.field-meta.xml
<CustomField>
    <fullName>PQ_2_Yes__c</fullName>
    <formula>PureCloud_Question2__c == &apos;Yes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PQ 2 - Yes</label>
    <type>Checkbox</type>
</CustomField>