force-app/main/default/objects/Activity/fields/PQ_3_No__c.field-meta.xml
<CustomField>
    <fullName>PQ_3_No__c</fullName>
    <formula>PureCloud_Question3__c == &apos;No&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PQ 3 - No</label>
    <type>Checkbox</type>
</CustomField>