force-app/main/default/objects/Activity/fields/PQ_3_Yes__c.field-meta.xml
<CustomField>
    <fullName>PQ_3_Yes__c</fullName>
    <formula>PureCloud_Question3__c == &apos;Yes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PQ 3 - Yes</label>
    <type>Checkbox</type>
</CustomField>