force-app/main/default/objects/Activity/fields/Purecloud_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Purecloud_Call_ID__c</fullName>
    <label>Telephony Call ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>