force-app/main/default/objects/Activity/fields/Purecloud_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Purecloud_Created_Date__c</fullName>
    <label>Telephony Created Date</label>
    <type>Date</type>
</CustomField>