force-app/main/default/objects/Activity/fields/PureCloud_Hold_API__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Hold_API__c</fullName>
    <label>Telephony Hold API</label>
    <type>TextArea</type>
</CustomField>