force-app/main/default/objects/Activity/fields/PureCloud_Interaction_Link__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Interaction_Link__c</fullName>
    <formula>IF(
  RecordType.Name = &quot;ARSI&quot;,
  HYPERLINK(
    $Label.ARSI_Interaction_Link &amp; CallObject &amp; &quot;&amp;callDate=&quot; &amp; TEXT(ActivityDate),
    $Label.ARSI_Interaction_Link &amp; CallObject &amp; &quot;&amp;callDate=&quot; &amp; TEXT(ActivityDate) 
  ),
  HYPERLINK(
    &quot;https://apps.mypurecloud.jp/directory/#/engage/admin/interactions/&quot; &amp; CallObject,
    &quot;https://apps.mypurecloud.jp/directory/#/engage/admin/interactions/&quot; &amp; CallObject
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telephony Interaction Link</label>
    <type>Text</type>
</CustomField>