force-app/main/default/objects/Activity/fields/Purecloud_Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>Purecloud_Participant_ID__c</fullName>
    <description>Participant ID untuk call log masing-masing call log.. Misalkan ada 3 participant di 1 conversation ID, maka ID pertama adalah ID participant pertama, dan seterusnya.. (Untuk membedakan transfer)</description>
    <label>Telephony Participant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>