force-app/main/default/objects/Activity/fields/PureCloud_Question1__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Question1__c</fullName>
    <label>Telephony - Question1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>