force-app/main/default/objects/Activity/fields/PureCloud_Question2__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Question2__c</fullName>
    <label>Telephony - Question2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>