force-app/main/default/objects/Activity/fields/PureCloud_Question3__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Question3__c</fullName>
    <label>Telephony - Question3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>