force-app/main/default/objects/Activity/fields/PureCloud_Survey__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Survey__c</fullName>
    <label>Telephony - Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>