force-app/main/default/objects/Activity/fields/PureCloud_Verint_Link__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Verint_Link__c</fullName>
    <formula>IF(
  RecordType.Name = &quot;ARSI&quot;,
  HYPERLINK(
    $Label.ARSI_Interaction_Link &amp; CallObject &amp; &quot;&amp;callDate=&quot; &amp; TEXT(ActivityDate),
    $Label.ARSI_Interaction_Link &amp; CallObject &amp; &quot;&amp;callDate=&quot; &amp; TEXT(ActivityDate) 
  ),
  HYPERLINK(
    &quot;https://wrcmid01:8443/getRecording?id=&quot; + CallObject,
    &quot;https://wrcmid01:8443/getRecording?id=&quot; + CallObject
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telephony Recording Link</label>
    <type>Text</type>
</CustomField>