force-app/main/default/objects/Activity/fields/Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_ID__c</fullName>
    <label>Queue Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>