force-app/main/default/objects/Activity/fields/Queue_PureCloud__c.field-meta.xml
<CustomField>
    <fullName>Queue_PureCloud__c</fullName>
    <formula>TEXT(Owner:User.Queue_PureCloud__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Telephony</label>
    <type>Text</type>
</CustomField>