force-app/main/default/objects/Activity/fields/Resechedule_Call_Line__c.field-meta.xml
<CustomField>
    <fullName>Resechedule_Call_Line__c</fullName>
    <label>Resechedule Call Line</label>
    <type>DateTime</type>
</CustomField>