force-app/main/default/objects/Activity/fields/Running_By__c.field-meta.xml
<CustomField>
    <fullName>Running_By__c</fullName>
    <description>Running By &quot;Scheduler&quot;, atau kosong. Untuk mencatat apakah update terakhir pada data telah &quot;diRunning&quot; oleh sistem (Scheduler) atau tidak (kosong). Digunakan utk keperluan check hasil API Scheduler Survey / Purecloud_GetSurveyResult_Batch.</description>
    <label>Running By</label>
    <length>128</length>
    <type>Text</type>
</CustomField>