force-app/main/default/objects/Activity/fields/SIP__c.field-meta.xml
<CustomField>
    <fullName>SIP__c</fullName>
    <formula>Owner:User.SIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIP</label>
    <type>Text</type>
</CustomField>