force-app/main/default/objects/Activity/fields/Softphone_Type__c.field-meta.xml
<CustomField>
    <fullName>Softphone_Type__c</fullName>
    <formula>&quot;PureCloud&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Softphone Type</label>
    <type>Text</type>
</CustomField>