force-app/main/default/objects/Activity/fields/Start_Calling__c.field-meta.xml
<CustomField>
    <fullName>Start_Calling__c</fullName>
    <label>Start Calling</label>
    <type>DateTime</type>
</CustomField>