force-app/main/default/objects/Activity/fields/Start_Calling_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Calling_Text__c</fullName>
    <description>LEFT(TEXT((Start_Calling__c + ((7*60))/1440)),LEN(TEXT(Start_Calling__c))-7) &amp;&apos;:00&apos;</description>
    <formula>SUBSTITUTE(TEXT(( Start_Calling__c + ((7*60))/1440)),&quot;Z&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Calling Text</label>
    <type>Text</type>
</CustomField>