force-app/main/default/objects/Activity/fields/Start_Dialing__c.field-meta.xml
<CustomField>
    <fullName>Start_Dialing__c</fullName>
    <label>Start Dialing</label>
    <type>DateTime</type>
</CustomField>