force-app/main/default/objects/Activity/fields/Start_Dialing_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Dialing_Text__c</fullName>
    <formula>SUBSTITUTE(TEXT(( Start_Dialing__c + ((7*60))/1440)),&quot;Z&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Dialing Text</label>
    <type>Text</type>
</CustomField>