force-app/main/default/objects/Activity/fields/Tanggal__c.field-meta.xml
<CustomField>
    <fullName>Tanggal__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tanggal</label>
    <type>Date</type>
</CustomField>