force-app/main/default/objects/Activity/fields/Time_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Time_Reminder__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>