force-app/main/default/objects/Activity/fields/Transfer_From__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From__c</fullName>
    <label>Transfer From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>