force-app/main/default/objects/Activity/fields/Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To__c</fullName>
    <label>Transfer To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>